deploy: 55d9118382ba154bee9365e59c89312c476d04ac

--- a/genindex.html
+++ b/genindex.html
@@ -419,6 +419,8 @@
         </ul></li>
         <li><a href="utils.html#oneflow.utils.vision.transforms.CenterCrop">CenterCrop (class in oneflow.utils.vision.transforms)</a>
 </li>
+        <li><a href="utils.html#oneflow.utils.data.DataLoader.check_worker_number_rationality">check_worker_number_rationality() (oneflow.utils.data.DataLoader method)</a>
+</li>
         <li><a href="module.html#oneflow.nn.Module.children">children() (oneflow.nn.Module method)</a>
 </li>
         <li><a href="oneflow.html#oneflow.chunk">chunk() (in module oneflow)</a>
@@ -473,10 +475,10 @@
 </li>
         <li><a href="nn.html#oneflow.nn.CombinedMarginLoss">CombinedMarginLoss (class in oneflow.nn)</a>
 </li>
-        <li><a href="utils.html#oneflow.utils.vision.transforms.Compose">Compose (class in oneflow.utils.vision.transforms)</a>
-</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="utils.html#oneflow.utils.vision.transforms.Compose">Compose (class in oneflow.utils.vision.transforms)</a>
+</li>
         <li><a href="utils.html#oneflow.utils.data.ConcatDataset">ConcatDataset (class in oneflow.utils.data)</a>
 </li>
         <li><a href="module.html#oneflow.nn.Module.consistent">consistent() (oneflow.nn.Module property)</a>
@@ -1087,8 +1089,6 @@
           <li><a href="tensor.html#oneflow.Tensor.log1p">(oneflow.Tensor method)</a>
 </li>
         </ul></li>
-        <li><a href="functional.html#oneflow.nn.functional.log_sigmoid">log_sigmoid() (in module oneflow.nn.functional)</a>
-</li>
         <li><a href="oneflow.html#oneflow.logical_and">logical_and() (in module oneflow)</a>
 
         <ul>
@@ -1108,6 +1108,8 @@
 </li>
         </ul></li>
         <li><a href="nn.html#oneflow.nn.LogSigmoid">LogSigmoid (class in oneflow.nn)</a>
+</li>
+        <li><a href="functional.html#oneflow.nn.functional.logsigmoid">logsigmoid() (in module oneflow.nn.functional)</a>
 </li>
         <li><a href="nn.html#oneflow.nn.LogSoftmax">LogSoftmax (class in oneflow.nn)</a>
 </li>
