deploy: 83afdeb470997e872039fdca58febeecbe520405

--- a/genindex.html
+++ b/genindex.html
@@ -1777,8 +1777,6 @@
 </li>
         <li><a href="nn.html#oneflow.nn.Softmax">Softmax (class in oneflow.nn)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="oneflow.html#oneflow.softmax">softmax() (in module oneflow)</a>
 
         <ul>
@@ -1787,6 +1785,8 @@
           <li><a href="tensor.html#oneflow.Tensor.softmax">(oneflow.Tensor method)</a>
 </li>
         </ul></li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="nn.html#oneflow.nn.Softplus">Softplus (class in oneflow.nn)</a>
 </li>
         <li><a href="oneflow.html#oneflow.softplus">softplus() (in module oneflow)</a>
@@ -1889,6 +1889,16 @@
 </li>
         <li><a href="oneflow.html#oneflow.sum">sum() (in module oneflow)</a>
 </li>
+        <li><a href="optim.html#oneflow.optim.Adam.support_sparse">support_sparse() (oneflow.optim.Adam property)</a>
+
+        <ul>
+          <li><a href="optim.html#oneflow.optim.AdamW.support_sparse">(oneflow.optim.AdamW property)</a>
+</li>
+          <li><a href="optim.html#oneflow.optim.Optimizer.support_sparse">(oneflow.optim.Optimizer property)</a>
+</li>
+          <li><a href="optim.html#oneflow.optim.SGD.support_sparse">(oneflow.optim.SGD property)</a>
+</li>
+        </ul></li>
     </ul></td>
   </tr></table>
 </section>
