--- a/genindex.html
+++ b/genindex.html
@@ -750,6 +750,8 @@
 </li>
           <li><a href="module.html#oneflow.nn.Module.extra_repr">(oneflow.nn.Module method)</a>
 </li>
+          <li><a href="nn.html#oneflow.nn.PReLU.extra_repr">(oneflow.nn.PReLU method)</a>
+</li>
           <li><a href="nn.html#oneflow.nn.ReflectionPad2d.extra_repr">(oneflow.nn.ReflectionPad2d method)</a>
 </li>
           <li><a href="nn.html#oneflow.nn.ReLU.extra_repr">(oneflow.nn.ReLU method)</a>
