--- a/genindex.html
+++ b/genindex.html
@@ -453,8 +453,6 @@
 </li>
         <li><a href="utils.html#oneflow.utils.data.ConcatDataset">ConcatDataset (class in oneflow.utils.data)</a>
 </li>
-        <li><a href="module.html#oneflow.nn.Module.consistent">consistent() (oneflow.nn.Module property)</a>
-</li>
         <li><a href="nn.html#oneflow.nn.ConstantPad1d">ConstantPad1d (class in oneflow.nn)</a>
 </li>
         <li><a href="nn.html#oneflow.nn.ConstantPad2d">ConstantPad2d (class in oneflow.nn)</a>
@@ -921,7 +919,7 @@
 </li>
         <li><a href="cuda.html#oneflow.cuda.is_available">is_available() (in module oneflow.cuda)</a>
 </li>
-        <li><a href="tensor.html#oneflow.Tensor.is_consistent">is_consistent() (oneflow.Tensor property)</a>
+        <li><a href="tensor.html#oneflow.Tensor.is_consistent">is_consistent() (oneflow.Tensor method)</a>
 </li>
         <li><a href="tensor.html#oneflow.Tensor.is_contiguous">is_contiguous() (oneflow.Tensor method)</a>
 </li>
@@ -1785,12 +1783,10 @@
         </ul></li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="module.html#oneflow.nn.Module.to_consistent">to_consistent() (oneflow.nn.Module method)</a>
-
-        <ul>
-          <li><a href="tensor.html#oneflow.Tensor.to_consistent">(oneflow.Tensor method)</a>
+        <li><a href="tensor.html#oneflow.Tensor.to_consistent">to_consistent() (oneflow.Tensor method)</a>
 </li>
-        </ul></li>
+        <li><a href="module.html#oneflow.nn.Module.to_global">to_global() (oneflow.nn.Module method)</a>
+</li>
         <li><a href="tensor.html#oneflow.Tensor.to_local">to_local() (oneflow.Tensor method)</a>
 </li>
         <li><a href="tensor.html#oneflow.Tensor.tolist">tolist() (oneflow.Tensor method)</a>
