deploy: f9134a632b31ef05d11d243ce3e99b0b21262616

--- a/genindex.html
+++ b/genindex.html
@@ -1783,8 +1783,12 @@
         </ul></li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="tensor.html#oneflow.Tensor.to_consistent">to_consistent() (oneflow.Tensor method)</a>
+        <li><a href="module.html#oneflow.nn.Module.to_consistent">to_consistent() (oneflow.nn.Module method)</a>
+
+        <ul>
+          <li><a href="tensor.html#oneflow.Tensor.to_consistent">(oneflow.Tensor method)</a>
 </li>
+        </ul></li>
         <li><a href="module.html#oneflow.nn.Module.to_global">to_global() (oneflow.nn.Module method)</a>
 </li>
         <li><a href="tensor.html#oneflow.Tensor.to_local">to_local() (oneflow.Tensor method)</a>
