--- a/genindex.html
+++ b/genindex.html
@@ -365,13 +365,15 @@
 </li>
         <li><a href="nn.html#oneflow.nn.BCEWithLogitsLoss">BCEWithLogitsLoss (class in oneflow.nn)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="oneflow.html#oneflow.bernoulli">bernoulli() (in module oneflow)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="nn.html#oneflow.nn.Conv1d.bias">bias (oneflow.nn.Conv1d attribute)</a>
 
         <ul>
+          <li><a href="nn.html#oneflow.nn.Conv2d.bias">(oneflow.nn.Conv2d attribute)</a>
+</li>
           <li><a href="nn.html#oneflow.nn.Conv3d.bias">(oneflow.nn.Conv3d attribute)</a>
 </li>
           <li><a href="nn.html#oneflow.nn.ConvTranspose1d.bias">(oneflow.nn.ConvTranspose1d attribute)</a>
@@ -1878,6 +1880,8 @@
         <li><a href="nn.html#oneflow.nn.Conv1d.weight">weight (oneflow.nn.Conv1d attribute)</a>
 
         <ul>
+          <li><a href="nn.html#oneflow.nn.Conv2d.weight">(oneflow.nn.Conv2d attribute)</a>
+</li>
           <li><a href="nn.html#oneflow.nn.Conv3d.weight">(oneflow.nn.Conv3d attribute)</a>
 </li>
           <li><a href="nn.html#oneflow.nn.ConvTranspose1d.weight">(oneflow.nn.ConvTranspose1d attribute)</a>
