--- a/genindex.html
+++ b/genindex.html
@@ -989,9 +989,11 @@
 </li>
         <li><a href="oneflow.html#oneflow.load">load() (in module oneflow)</a>
 </li>
-        <li><a href="module.html#oneflow.nn.Module.load_state_dict">load_state_dict() (oneflow.nn.Module method)</a>
+        <li><a href="graph.html#oneflow.nn.Graph.load_state_dict">load_state_dict() (oneflow.nn.Graph method)</a>
 
         <ul>
+          <li><a href="module.html#oneflow.nn.Module.load_state_dict">(oneflow.nn.Module method)</a>
+</li>
           <li><a href="optim.html#oneflow.optim.lr_scheduler.LambdaLR.load_state_dict">(oneflow.optim.lr_scheduler.LambdaLR method)</a>
 </li>
           <li><a href="optim.html#oneflow.optim.Optimizer.load_state_dict">(oneflow.optim.Optimizer method)</a>
@@ -1679,9 +1681,11 @@
         </ul></li>
         <li><a href="oneflow.html#oneflow.stack">stack() (in module oneflow)</a>
 </li>
-        <li><a href="module.html#oneflow.nn.Module.state_dict">state_dict() (oneflow.nn.Module method)</a>
+        <li><a href="graph.html#oneflow.nn.Graph.state_dict">state_dict() (oneflow.nn.Graph method)</a>
 
         <ul>
+          <li><a href="module.html#oneflow.nn.Module.state_dict">(oneflow.nn.Module method)</a>
+</li>
           <li><a href="optim.html#oneflow.optim.lr_scheduler.LambdaLR.state_dict">(oneflow.optim.lr_scheduler.LambdaLR method)</a>
 </li>
           <li><a href="optim.html#oneflow.optim.Optimizer.state_dict">(oneflow.optim.Optimizer method)</a>
@@ -1800,8 +1804,6 @@
         <li><a href="tensor.html#oneflow.Tensor.topk">topk() (oneflow.Tensor method)</a>
 </li>
         <li><a href="module.html#oneflow.nn.Module.train">train() (oneflow.nn.Module method)</a>
-</li>
-        <li><a href="graph.html#oneflow.nn.Graph.training">training() (oneflow.nn.Graph property)</a>
 </li>
         <li><a href="oneflow.html#oneflow.transpose">transpose() (in module oneflow)</a>
 
