--- a/functional.html
+++ b/functional.html
@@ -1193,7 +1193,7 @@ a tuple <cite>(dT, dH, dW)</cite>. Default: 1</p></li>
 <span class="gp">... </span>    <span class="n">labels</span><span class="o">=</span><span class="n">labels</span><span class="p">,</span> <span class="n">logits</span><span class="o">=</span><span class="n">logits</span>
 <span class="gp">... </span><span class="p">)</span>
 <span class="gp">&gt;&gt;&gt; </span><span class="n">output</span>
-<span class="go">tensor([0.2975, 1.1448, -0.0000], dtype=oneflow.float32)</span>
+<span class="go">tensor([ 2.9751e-01,  1.1448e+00, -1.4305e-06], dtype=oneflow.float32)</span>
 </pre></div>
 </div>
 </dd></dl>
