deploy: af962b4a90122d623137242bd7a38fabbd618e3c

--- a/genindex.html
+++ b/genindex.html
@@ -1635,12 +1635,14 @@
           <li><a href="tensor.html#oneflow.Tensor.permute">(oneflow.Tensor method)</a>
 </li>
         </ul></li>
-        <li><a href="nn.html#oneflow.nn.PixelShuffle">PixelShuffle (in module oneflow.nn)</a>
+        <li><a href="utils.html#oneflow.utils.data.DataLoader.pin_memory">pin_memory (oneflow.utils.data.DataLoader attribute)</a>
 </li>
-        <li><a href="nn.html#oneflow.nn.modules.pixelshuffle.PixelShufflev2">PixelShufflev2() (in module oneflow.nn.modules.pixelshuffle)</a>
+        <li><a href="nn.html#oneflow.nn.PixelShuffle">PixelShuffle (in module oneflow.nn)</a>
 </li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="nn.html#oneflow.nn.modules.pixelshuffle.PixelShufflev2">PixelShufflev2() (in module oneflow.nn.modules.pixelshuffle)</a>
+</li>
         <li><a href="tensor_attributes.html#oneflow.placement">placement (class in oneflow)</a>
 
         <ul>
@@ -2211,17 +2213,15 @@
 </li>
         <li><a href="tensor.html#oneflow.Tensor.uniform_">uniform_() (oneflow.Tensor method)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="oneflow.html#oneflow.unsqueeze">unsqueeze() (in module oneflow)</a>
 
         <ul>
           <li><a href="tensor.html#oneflow.Tensor.unsqueeze">(oneflow.Tensor method)</a>
 </li>
         </ul></li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="nn.html#oneflow.nn.Upsample">Upsample (class in oneflow.nn)</a>
-</li>
-        <li><a href="functional.html#oneflow.nn.functional.upsample">upsample() (in module oneflow.nn.functional)</a>
 </li>
         <li><a href="nn.html#oneflow.nn.UpsamplingBilinear2d">UpsamplingBilinear2d (class in oneflow.nn)</a>
 </li>
