--- a/linalg.html
+++ b/linalg.html
@@ -268,11 +268,11 @@
 </tr>
 <tr class="row-odd"><td><p><cite>‘fro’</cite></p></td>
 <td><p>Frobenius norm</p></td>
-<td><p>– not supported –</p></td>
+<td><p>– 尚不支持 –</p></td>
 </tr>
 <tr class="row-even"><td><p><cite>‘nuc’</cite></p></td>
 <td><p>– 尚不支持 –</p></td>
-<td><p>– not supported –</p></td>
+<td><p>– 尚不支持 –</p></td>
 </tr>
 <tr class="row-odd"><td><p><cite>inf</cite></p></td>
 <td><p><cite>max(sum(abs(x), dim=1))</cite></p></td>
@@ -288,19 +288,19 @@
 </tr>
 <tr class="row-even"><td><p><cite>1</cite></p></td>
 <td><p><cite>max(sum(abs(x), dim=0))</cite></p></td>
-<td><p>as below</p></td>
+<td><p>见下</p></td>
 </tr>
 <tr class="row-odd"><td><p><cite>-1</cite></p></td>
 <td><p><cite>min(sum(abs(x), dim=0))</cite></p></td>
-<td><p>as below</p></td>
+<td><p>见下</p></td>
 </tr>
 <tr class="row-even"><td><p><cite>2</cite></p></td>
 <td><p>– 尚不支持 –</p></td>
-<td><p>as below</p></td>
+<td><p>见下</p></td>
 </tr>
 <tr class="row-odd"><td><p><cite>-2</cite></p></td>
 <td><p>– 尚不支持 –</p></td>
-<td><p>as below</p></td>
+<td><p>见下</p></td>
 </tr>
 <tr class="row-even"><td><p>其他</p></td>
 <td><p>– 不支持 –</p></td>
